# Intelligent-Budget-Allocation-System

./: README.md  main.py  pyproject.toml
core/: allocate.py  evaluation.py  model.py  profiling.py
core/llms/: GoogleLLM.py  prompts.yaml
core/models/: AllocationSummary.py  Campaign.py  CampaignAllocation.py  CampaignProfile.py  Campaigns.py  CampaignsProfile.py  FinalResult.py  __init__.py  model.py
data/: historical_eval_cases.json  temp_eval_campaigns.json
info/[External] AI Engineer Test Task/: Instructions.txt  campaigns.json  strategy_brief.txt
tests/: test_allocation.py  test_gemini.py  test_profiling.py
utils/: indexes.py  statistics.py
