[project]
name = "delvedeeper"
version = "0.1.0"
description = "This is a Test Task Repository for DelveDeeper AI Enginner position."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.73.1",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]
